# software-licensor-client-side-library

./: .gitignore  README.md  entitlements.plist
SoftwareLicensorJUCE/: SoftwareLicensorJUCE.jucer
SoftwareLicensorJUCE/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
SoftwareLicensorJUCE/Resources/: Texts_en.properties  Texts_es.properties  Texts_fr.properties
SoftwareLicensorJUCE/Source/: SoftwareLicensorStatus.cpp  SoftwareLicensorStatus.h  SoftwareLicensorUnlockForm.cpp  SoftwareLicensorUnlockForm.h
cpp_test/: CMakeLists.txt  main.cpp
cpp_test/include/: licensing.h
software_licensor_juce/: SoftwareLicensorJUCE.jucer  software_licensor_juce.cpp  software_licensor_juce.h
software_licensor_juce/marketplace/: SoftwareLicensorStatus.cpp  SoftwareLicensorStatus.h  SoftwareLicensorUnlockForm.cpp  SoftwareLicensorUnlockForm.h
software_licensor_static_rust_lib/: Cargo.toml  LICENSE-MIT  README.md  build.rs  build_mac.sh
software_licensor_static_rust_lib/protos/: software_licensor_local.proto
software_licensor_static_rust_lib/src/: api.rs  error.rs  file_io.rs  lib.rs  macros.rs
