[package]
name = "software_licensor_static_rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "software_licensor_static_rust_lib"
crate-type = ["staticlib"]

[build-dependencies]
prost-build = { version = "0.13", optional = true }
cxx-build = "1.0"

[features]
build-protos = ["prost-build"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
cxx = { version = "1.0.124", features = ["c++17"]}
hkdf = "0.12.4"
p384 = { version = "0.13.0", features = ["ecdsa"]}
prost = "0.13"
prost-types = "0.13"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["rustls-tls"], default-features = false}
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"]}
